--- a/SlothCodeAnalysis.Tests/SlothCodeAnalysis.Tests.csproj
+++ b/SlothCodeAnalysis.Tests/SlothCodeAnalysis.Tests.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LexicalTests.cs" />
+    <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SlidingTextWindowTests.cs" />
   </ItemGroup>
