--- a/SlothCodeAnalysis/SlothCodeAnalysis.csproj
+++ b/SlothCodeAnalysis/SlothCodeAnalysis.csproj
@@ -39,9 +39,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="InternalUtilities\ExceptionUtilities.cs" />
     <Compile Include="InternalUtilities\StackGuard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Syntax\InternalSyntax\InternalNode.cs" />
+    <Compile Include="Syntax\RedNode.cs" />
+    <Compile Include="Syntax\InternalSyntax\GreenNode.cs" />
     <Compile Include="Syntax\InternalSyntax\LanguageParser.cs" />
     <Compile Include="Syntax\InternalSyntax\Lexer.cs" />
     <Compile Include="Syntax\InternalSyntax\MissingToken.cs" />
@@ -57,6 +59,7 @@
     <Compile Include="Syntax\SyntaxFactory.cs" />
     <Compile Include="Syntax\SyntaxKind.cs" />
     <Compile Include="Syntax\SyntaxKindFacts.cs" />
+    <Compile Include="Syntax\SyntaxList.cs" />
     <Compile Include="Syntax\SyntaxNode.cs" />
     <Compile Include="Syntax\SyntaxToken.cs" />
     <Compile Include="Syntax\SyntaxTree.cs" />
