--- a/SlothCodeAnalysis/SlothCodeAnalysis.csproj
+++ b/SlothCodeAnalysis/SlothCodeAnalysis.csproj
@@ -42,6 +42,7 @@
     <Compile Include="InternalUtilities\ExceptionUtilities.cs" />
     <Compile Include="InternalUtilities\StackGuard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Syntax\ChildSyntaxList.cs" />
     <Compile Include="Syntax\RedNode.cs" />
     <Compile Include="Syntax\InternalSyntax\GreenNode.cs" />
     <Compile Include="Syntax\InternalSyntax\LanguageParser.cs" />
@@ -61,10 +62,14 @@
     <Compile Include="Syntax\SyntaxKindFacts.cs" />
     <Compile Include="Syntax\SyntaxList.cs" />
     <Compile Include="Syntax\SyntaxNode.cs" />
+    <Compile Include="Syntax\SyntaxNodeOrToken.cs" />
     <Compile Include="Syntax\SyntaxToken.cs" />
     <Compile Include="Syntax\SyntaxTree.cs" />
+    <Compile Include="Syntax\SyntaxTree.ParsedSyntaxTree.cs" />
     <Compile Include="Syntax\SyntaxTrivia.cs" />
     <Compile Include="Syntax\SyntaxTypes.cs" />
+    <Compile Include="Syntax\SyntaxWalker.cs" />
+    <Compile Include="Syntax\SyntaxWalkerDepth.cs" />
     <Compile Include="Text\SlidingTextWindow.cs" />
     <Compile Include="Text\SourceText.cs" />
     <Compile Include="Text\StringText.cs" />
