--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ build:
   project: Sloth.sln
   verbosity: minimal
 
-after build:
+after_build:
   7z a slothpad.zip %APPVEYOR_BUILD_FOLDER%\Slothpad\bin\debug\*.dll
   
 artifacts:
