--- a/SlothCodeAnalysis/SlothCodeAnalysis.csproj
+++ b/SlothCodeAnalysis/SlothCodeAnalysis.csproj
@@ -74,6 +74,9 @@
     <Compile Include="Text\SourceText.cs" />
     <Compile Include="Text\StringText.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Syntax\InternalSyntax\Class_Diagram.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
