--- a/SlothCodeAnalysis/SlothCodeAnalysis.csproj
+++ b/SlothCodeAnalysis/SlothCodeAnalysis.csproj
@@ -35,13 +35,19 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <Folder Include="BoundTree\" />
     <Folder Include="Parser\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Compilation\Compilation.cs" />
+    <Compile Include="Compilation\SyntaxAndDeclarationManager.cs" />
     <Compile Include="InternalUtilities\ExceptionUtilities.cs" />
     <Compile Include="InternalUtilities\StackGuard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Symbols\ISymbol.cs" />
+    <Compile Include="Symbols\Symbol.cs" />
+    <Compile Include="Symbols\TypeKind.cs" />
     <Compile Include="Syntax\ChildSyntaxList.cs" />
     <Compile Include="Syntax\RedNode.cs" />
     <Compile Include="Syntax\InternalSyntax\GreenNode.cs" />
@@ -73,6 +79,7 @@
     <Compile Include="Text\SlidingTextWindow.cs" />
     <Compile Include="Text\SourceText.cs" />
     <Compile Include="Text\StringText.cs" />
+    <Compile Include="Text\TextSpan.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Syntax\InternalSyntax\Class_Diagram.png" />
