--- a/SlothCodeAnalysis.Tests/SlothCodeAnalysis.Tests.csproj
+++ b/SlothCodeAnalysis.Tests/SlothCodeAnalysis.Tests.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinderTests.cs" />
     <Compile Include="LexicalTests.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
