Uplift to .NET core 3.1

--- a/SlothCodeAnalysis/SlothCodeAnalysis.csproj
+++ b/SlothCodeAnalysis/SlothCodeAnalysis.csproj
@@ -1,140 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2491A296-EAE3-4D53-91B8-B785195584DC}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SlothCodeAnalysis</RootNamespace>
-    <AssemblyName>SlothCodeAnalysis</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
-    <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-    <Folder Include="Parser\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Binder\Binder.cs" />
-    <Compile Include="Binder\Binder_Expression.cs" />
-    <Compile Include="Binder\Binder_Operators.cs" />
-    <Compile Include="Binder\Binder_Statements.cs" />
-    <Compile Include="Binder\Binder_Symbol.cs" />
-    <Compile Include="Binder\BindingDiagnosticBag.cs" />
-    <Compile Include="Binder\LookupResult.cs" />
-    <Compile Include="Binder\Semantics\Operators\BinaryOperatorAnalysisResult.cs" />
-    <Compile Include="Binder\Semantics\Operators\BinaryOperatorEasyOut.cs" />
-    <Compile Include="Binder\Semantics\Operators\BinaryOperatorOverloadResolution.cs" />
-    <Compile Include="Binder\Semantics\Operators\BinaryOperatorOverloadResolutionResult.cs" />
-    <Compile Include="Binder\Semantics\Operators\BinaryOperatorSignature.cs" />
-    <Compile Include="Binder\Semantics\Operators\OperatorAnalysisResultKind.cs" />
-    <Compile Include="Binder\Semantics\Operators\OperatorKind.cs" />
-    <Compile Include="Binder\Semantics\Operators\OperatorKindExtensions.cs" />
-    <Compile Include="Binder\Semantics\OverloadResolution\OverloadResolution.cs" />
-    <Compile Include="BoundTree\BoundKind.cs" />
-    <Compile Include="BoundTree\BoundNode.cs" />
-    <Compile Include="BoundTree\BoundNodes.cs" />
-    <Compile Include="BoundTree\BoundTreeVisitor.cs" />
-    <Compile Include="Class1.cs" />
-    <Compile Include="Collections\Boxes.cs" />
-    <Compile Include="Compilation\BuiltInOperators.cs" />
-    <Compile Include="Compilation\SlothCompilation.cs" />
-    <Compile Include="Compilation\SyntaxTreeSemanticModel.cs" />
-    <Compile Include="Compilation\SyntaxAndDeclarationManager.cs" />
-    <Compile Include="ConstantValue.cs" />
-    <Compile Include="ConstantValueSpecialized.cs" />
-    <Compile Include="Diagnostic\DiagnosticBag.cs" />
-    <Compile Include="Diagnostic\SlothDiagnostic.cs" />
-    <Compile Include="Diagnostic\DiagnosticInfo.cs" />
-    <Compile Include="Diagnostic\SourceLocation.cs" />
-    <Compile Include="Errors\ErrorCode.cs" />
-    <Compile Include="InternalUtilities\ExceptionUtilities.cs" />
-    <Compile Include="InternalUtilities\Hash.cs" />
-    <Compile Include="InternalUtilities\StackGuard.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SpecialType.cs" />
-    <Compile Include="SpecialTypeExtensions.cs" />
-    <Compile Include="Symbols\AssemblySymbol.cs" />
-    <Compile Include="Symbols\ISymbol.cs" />
-    <Compile Include="Symbols\NamedTypeSymbol.cs" />
-    <Compile Include="Symbols\Symbol.cs" />
-    <Compile Include="Symbols\TypeKind.cs" />
-    <Compile Include="Symbols\TypeSymbol.cs" />
-    <Compile Include="Symbols\TypeSymbolExtensions.cs" />
-    <Compile Include="Syntax\ChildSyntaxList.cs" />
-    <Compile Include="Syntax\RedNode.cs" />
-    <Compile Include="Syntax\InternalSyntax\GreenNode.cs" />
-    <Compile Include="Syntax\InternalSyntax\LanguageParser.cs" />
-    <Compile Include="Syntax\InternalSyntax\Lexer.cs" />
-    <Compile Include="Syntax\InternalSyntax\MissingToken.cs" />
-    <Compile Include="Syntax\InternalSyntax\SyntaxFactory.cs" />
-    <Compile Include="Syntax\InternalSyntax\SyntaxIdentifier.cs" />
-    <Compile Include="Syntax\InternalSyntax\SyntaxList.cs" />
-    <Compile Include="Syntax\InternalSyntax\SyntaxListBuilder.cs" />
-    <Compile Include="Syntax\InternalSyntax\SyntaxNode.cs" />
-    <Compile Include="Syntax\InternalSyntax\SyntaxToken.cs" />
-    <Compile Include="Syntax\InternalSyntax\SyntaxTokenWithValue.cs" />
-    <Compile Include="Syntax\InternalSyntax\SyntaxTrivia.cs" />
-    <Compile Include="Syntax\InternalSyntax\SyntaxTypes.cs" />
-    <Compile Include="Syntax\SyntaxFactory.cs" />
-    <Compile Include="Syntax\SyntaxKind.cs" />
-    <Compile Include="Syntax\SyntaxKindFacts.cs" />
-    <Compile Include="Syntax\SyntaxList.cs" />
-    <Compile Include="Syntax\SyntaxNode.cs" />
-    <Compile Include="Syntax\SyntaxNodeOrToken.cs" />
-    <Compile Include="Syntax\SyntaxToken.cs" />
-    <Compile Include="Syntax\SyntaxTree.cs" />
-    <Compile Include="Syntax\SyntaxTree.ParsedSyntaxTree.cs" />
-    <Compile Include="Syntax\SyntaxTrivia.cs" />
-    <Compile Include="Syntax\SyntaxTypes.cs" />
-    <Compile Include="Syntax\SyntaxWalker.cs" />
-    <Compile Include="Syntax\SyntaxWalkerDepth.cs" />
-    <Compile Include="Text\SlidingTextWindow.cs" />
-    <Compile Include="Text\SourceText.cs" />
-    <Compile Include="Text\StringText.cs" />
-    <Compile Include="Text\TextSpan.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Syntax\InternalSyntax\Class_Diagram.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System.Collections.Immutable, Version=1.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Collections.Immutable.1.2.0\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
