--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,17 +1,20 @@
 version: 1.0.{build}
-os: Visual Studio 2015
+image: Visual Studio 2019
 
 environment:
     COVERALLS_REPO_TOKEN:  
        secure: D3xk3zhufhpC3ZTVEFQT4jGsSmEWWzNJdJsAUu2wK2EARb9Z3LO4Uaubq7HM007j
 
 install:
-    - nuget restore
-  
-build:
-  project: Sloth.sln
-  verbosity: minimal
+  # Install repo specific stuff here
+before_build:
+  # Display .NET Core version
+  - cmd: dotnet --version
 
+build_script:
+  # output will be in ./src/bin/debug/netcoreapp1.1/publish
+  - cmd: dotnet publish Sloth.sln
+  
 after_build:
   7z a slothpad.zip %APPVEYOR_BUILD_FOLDER%\SlothPad\bin\Debug\*
   
